k8s/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quali-fit
  namespace: quali-fit
spec:
  type: ClusterIP
  selector:
    app: quali-fit
  ports:
    - name: http
      port: 80
      targetPort: 8501
